--- a/templates/login.html
+++ b/templates/login.html
@@ -39,6 +39,7 @@
 
         <p>New artist? <a href="{{ url_for('signup') }}">Sign Up</a></p>
         <p><a href="{{ url_for('buyer_login') }}">Login as Buyer</a></p>
+        <p><a href="{{ url_for('sponsor_login') }}">Login as Sponsor</a></p>
     </div>
 
     <!-- DARK MODE TOGGLE -->
