--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -50,7 +50,7 @@
         <p><a href="{{ url_for('artist_sponsors') }}" class="btn-primary">Find Sponsors</a></p>
         <!-- ADD THIS LINE after "Find Sponsors" -->
         <p><a href="{{ url_for('artist_inbox') }}" class="btn-primary">View Offers ({{ artist.requests_received|length }})</a></p>
-
+        <p><a href="{{ url_for('events_page') }}" class="btn-primary">Browse Events</a></p>
         <p><a href="{{ url_for('logout') }}">Logout</a></p>
     </div>
 
