--- a/templates/login.html
+++ b/templates/login.html
@@ -40,6 +40,7 @@
         <p>New artist? <a href="{{ url_for('signup') }}">Sign Up</a></p>
         <p><a href="{{ url_for('buyer_login') }}">Login as Buyer</a></p>
         <p><a href="{{ url_for('sponsor_login') }}">Login as Sponsor</a></p>
+        <p><a href="{{ url_for('contractor_login') }}">Login as Contractor</a></p>
     </div>
 
     <!-- DARK MODE TOGGLE -->
