--- a/templates/contractor_dashboard.html
+++ b/templates/contractor_dashboard.html
@@ -9,6 +9,7 @@
     <div class="container">
         <h1>Welcome, {{ contractor.name }}</h1>
         <p><a href="{{ url_for('create_event') }}" class="btn-primary">Create Event</a></p>
+        <p><a href="{{ url_for('contractor_inbox') }}" class="btn-primary">View Applications ({{ pending_count }})</a></p>
 
         <h2>Your Events</h2>
         {% if events %}
