--- a/templates/sponsor_dashboard.html
+++ b/templates/sponsor_dashboard.html
@@ -31,6 +31,7 @@
                         <a href="{{ url_for('sponsor_offer', aid=artist.aid) }}" class="btn-primary">Send Offer</a>
                         <p><a href="{{ url_for('sponsor_inbox') }}" class="btn-primary">View Inbox ({{ sponsor.requests_received|length }})</a></p>
                         <p><a href="{{ url_for('events_page') }}" class="btn-success">Browse Events</a></p>
+                        <p><a href="{{ url_for('sponsor_sent') }}" class="btn-primary">View Sent Offers</a></p>
                     </div>
                 {% endfor %}
             </div>
@@ -61,6 +62,7 @@
             </div>
             <div class="event-actions">
                 <a href="{{ url_for('fund_event', eid=event.eid) }}" class="btn-success">Fund Event</a>
+                
             </div>
         </div>
         {% endfor %}
